--- a/static/style.css
+++ b/static/style.css
@@ -2,7 +2,7 @@ body {
     width: 960px;
     margin: 20px auto;
     font-family: Arial, sans-serif;
-    background-color: lightgreen;
+    background-color: whitesmoke;
 }
 
 .hide {
@@ -13,37 +13,42 @@ body {
 
 
 /* same large logo header for sign-in, profile, and logged-out pages */
-.hero h1 {
+.hero h2, h1 {
     display: block;
     grid-column: 1/3;
     grid-row: 1/3;
     z-index: 3;
     margin: auto;
-  
-    font-size: 240px;
-    color: white;
-    text-shadow: 0px 0px 20px red, 0px 0px 40px darkred;
+    
+    font-size: 200px;
+    color: rgb(1, 76, 56);
+    font-family: American Typewriter, serif;
+    /* text-shadow: 0px 0px 20px rgb(255, 119, 0), 0px 0px 40px rgb(1, 60, 44); */
+    /* font-family: cursive; */
+    /* border-bottom: 3px solid darkgreen; */
   }
 
-.hero h2 {
+/* .hero h3 {
     display: block;
     grid-column: 1/3;
     grid-row: 1/3;
     z-index: 4;
     margin: auto;
-    border-bottom: 3px solid darkgreen;
+    margin-right: 30px;
+    
   
-    font-size: 50px;
+    font-size: 40px;
     color: white;
-    text-shadow: 1px 1px 5px darkgreen, 3px 3px 2px orange, -3px -1px 2px green;
-    font-family: cursive;
-  }
+    text-shadow: 0px 0px 20px orange, 0px 0px 40px darkgreen;
+  } */
 
 .logo img {
     float:right;
     display: block;
-    height: 300px;
-    padding-left: 60px;
+    height: 200px;
+    padding-left: 0px;
+    margin-top: 30px;
+    margin-right:20px
 }
 
 
@@ -64,10 +69,10 @@ body {
     float:center;
     font-size: 24px;
     background-color: orange;
-    border: 7px outset orange;
+    border: 7px outset rgb(255, 119, 0);
     border-radius: 20px;
-    box-shadow: 0 0 4px darkgreen;
-    filter: drop-shadow(10px 4px 4px darkgreen);
+    box-shadow: 0 0 4px rgb(1, 76, 56);
+    filter: drop-shadow(10px 4px 4px rgb(1, 76, 56));
   }
   
 .splash .hero button:hover {
@@ -85,9 +90,11 @@ body {
 .header {
     margin-top: 30px;
     margin-bottom: 30px;
-
     font-size: 40px;
-    color: black;
+    color: rgb(255, 119, 0);
+    text-shadow: 0.5px 0.5px 4px orange
+    /* text-shadow: 1px 1px 5px rgb(255, 119, 0), 3px 3px 2px rgb(1, 76, 56), -3px -1px 2px rgb(1, 76, 56);
+    */
 }
 
 .auth.container {
@@ -100,11 +107,12 @@ body {
   }
   
 .profile .exit.logout {
-    margin-left: -60px;
     margin-top: 50px;
     margin-bottom: 60px;
+    padding: 5px;
     grid-column: 3/4;
-    background-color: darkorange;
+    background-color: rgb(186, 176, 236);
+    
   }
 
 
@@ -126,20 +134,194 @@ body {
 }
 
 .login .failed .message {
-  margin-top: 15px;
+  margin-top: 5px;
   margin-bottom: auto;
-  margin-left: -60px;
+  /* margin-left: -60px; */
+  font-size: 20px;
   padding: 8px;
-  color: black;
+  color: rgb(1, 76, 56);
   border-radius: 5px;
-  background-color: lightgray;
-  box-shadow: 0 0 5px 3px darkred;
+  background-color: whitesmoke;
+  font-style: bold;
+  box-shadow: 0 0 5px 3px rgb(186, 176, 236);
 }
 
 .login .failed button {
-  margin-top: 15px;
-  margin-left: 20px;
+  margin-top: 5px;
+  margin-left: 10px;
   margin-right: auto;
+  margin-bottom: 50px;;
   padding: 10px;
-  background-color: darkorange;
+  background-color: rgb(186, 176, 236);
+  
 }
+
+
+
+
+/* style for the chat pages */
+
+h3 {
+  font-size: 70px;
+  color: rgb(1, 76, 56);
+  font-family: American Typewriter, serif;
+}
+
+
+.small-logo {
+  height: 120px;
+  margin-left: 5px;
+  margin-bottom: 10px;
+}
+
+.top-header {
+  display: flex;
+  align-items: center;
+  margin-left: -90px;
+  margin-right: -90px;
+  margin-top: -30px;
+  /* border-bottom: 3px solid rgb(186, 176, 236); */
+}
+
+.top-header h4 {
+  /* margin-top: 30px;
+  margin-bottom: 30px; */
+  font-size: 40px;
+  color: rgb(255, 119, 0);
+  text-shadow: 0.5px 0.5px 4px orange;
+  margin-right: 10px;
+}
+
+.profile-button {
+  /* margin: 20px 40px 20px 40px;
+  padding: 10px 20px 10px 20px; */
+  font-size: 15px;
+  background-color: orange;
+  border: 6px outset rgb(255, 119, 0);
+  border-radius: 10px;
+  box-shadow: 0 0 3px rgb(1, 76, 56);
+  filter: drop-shadow(6px 3px 3px rgb(1, 76, 56));
+}
+.profile-button:hover {
+  box-shadow: 0 2px 5px darkgreen;
+}
+
+
+
+
+
+/* style for the two-column chat page */
+
+.page-container div {
+  border-radius: 5px;
+  padding: 10px;
+  background-color: rgb(1, 76, 56);
+  border: 2px solid rgb(1, 76, 56);
+}
+
+.page-container .right {
+  border-radius: 5px;
+  padding: 10px;
+  background-color: whitesmoke;
+/*   border: 2px solid rgb(1, 76, 56); */
+  border: None;
+  margin-left: 35px;
+}
+
+.page-container div.descriptions {
+  background-color: whitesmoke;
+  border: None;
+  font-size: 45px;
+  color: rgb(255, 119, 0);
+  text-shadow: 0.5px 0.5px 4px orange;
+  margin-bottom: -10px;
+}
+
+.page-container div.channel-option {
+  color: rgb(1, 76, 56);
+  background-color: whitesmoke;
+  border: 2px solid rgb(1, 76, 56);
+  font-family: American Typewriter, serif;
+}
+
+.page-container div.channel-option:hover {
+  background-color: lightgray;
+}
+.page-container div.channel-option#selected {
+  background-color: orange;
+  border: 2px solid rgb(1, 76, 56);
+  box-shadow: 0 0 5px 3px rgb(255, 119, 0);
+}
+.page-container {
+  display: grid;
+  grid-template-columns: 1fr 3fr;
+  grid-template-rows: repeat(1, 1fr);
+  gap: 10px;
+  margin-top: 20px;
+}
+
+unread {
+  font-size:15px;
+  color: rgb(255, 94, 0);
+  /* font-weight: bold; */
+}
+name {
+  font-size:25px;
+}
+
+message author {
+  color: rgb(186, 176, 236);
+  font-size:20px;
+  font-weight: bold;
+  display: block;
+  padding: 5px;
+  grid-column: 1/2;
+}
+
+message content {
+  display: block;
+  padding: 5px;
+  grid-column: 2/3;
+}
+
+hr {
+  border-color: rgb(186, 176, 236);
+}
+
+
+.page-container div.footer {
+  background-color: whitesmoke;
+  border: None;
+  margin-left: 35px;
+  margin-top:20px;
+}
+
+#post-box {
+  height:50px;
+  width: 100%;
+  position: relative;
+}
+
+#post-button {
+  background-color: rgb(186, 176, 236);
+  float:right;
+  padding:7px;
+  font-size:13px;
+  margin-top: 5px;
+}
+
+button.reaction {
+  color: rgb(255, 94, 0);
+  font-weight:bold;
+  width: auto;
+  height: 30px;
+  border-radius: 70%
+}
+
+
+
+
+
+/* https://developer.mozilla.org/en-US/docs/Learn/CSS/CSS_layout/Grids */
+
+/* https://css-tricks.com/snippets/css/a-guide-to-flexbox/ */
