--- a/static/style.css
+++ b/static/style.css
@@ -10,8 +10,6 @@ body {
 }
 
 
-
-
 /* same large logo header for sign-in, profile, and logged-out pages */
 .hero h2, h1 {
     display: block;
@@ -70,7 +68,7 @@ body {
 
 
 /* style on the profile page */
-.profile {
+#profile-page {
     display: block;
   }
 
@@ -104,7 +102,7 @@ body {
 
 
 /* style on the /login page */
-.login {
+#login-page {
   display: block;
 }
 
@@ -180,7 +178,7 @@ h3 {
   margin-right: 10px;
 }
 
-.profile-button {
+#profile-button1, #profile-button2 {
   /* margin: 20px 40px 20px 40px;
   padding: 10px 20px 10px 20px; */
   font-size: 15px;
@@ -245,7 +243,7 @@ h3 {
   border: 1px solid rgb(1, 76, 56);
   box-shadow: 0 0 5px 3px rgb(255, 119, 0);
 }
-.replies .page-container {
+.threads .page-container {
   display: grid;
   grid-template-columns: 1fr 2fr 1fr;
   grid-template-rows: repeat(1, 1fr);
