--- a/static/style.css
+++ b/static/style.css
@@ -313,7 +313,7 @@ button.reaction {
   border-radius: 70%
 }
 
-#create-channel {
+#create-channel1, #create-channel2 {
   background-color: rgb(186, 176, 236);
   font-size:20px;
   margin-top: 10px;
@@ -324,6 +324,15 @@ button.reaction {
   border:None;
 }
 
+#channel-set1, #channel-set2 {
+  width: 100%;
+  padding: 5px;
+}
+
+#hit-enter1, #hit-enter2  {
+  margin-top: 5px;
+  float: right;
+}
 
 
 button.reaction#exit-threads {
